--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/icon_web.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ICTUS | PRODUTOS PARA SAÚDE</title>
   </head>
